@@ -1,5 +1,6 @@
 CHANGES IN FLTK 1.3.0
 
+	- All draw() methods of widgets are now protected (STR #2142).
 	- The new configure option --enable-x11 (lowercase 'x') enables
 	  cygwin builds under Windows (with --enable-cygwin) to use X11
 	  instead of GDI drawing (STR #2147) and is ignored otherwise.
